Tue Mar 03 04:04:36 GMT 2015  Olly Betts <olly@survex.com>

	* java/docs/examples/SimpleSearch.java: getPercent() returns an
	  integer.

Tue Mar 03 04:01:46 GMT 2015  Ashley <ashley@eclipso.ch>

	* java/docs/examples/SimpleSearch.java: Fix build and update example.

Fri Feb 13 13:10:11 GMT 2015  Olly Betts <olly@survex.com>

	* python/smoketest.py,python3/smoketest.py: Update testcases for lazy
	  wildcard expansion change in xapian-core.

Wed Jan 07 04:00:24 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Don't AC_SUBST LUA_INC as we never use it.

Thu Dec 18 00:30:06 GMT 2014  Olly Betts <olly@survex.com>

	* python/python.i: Don't release the GIL when using
	  XapianSWIGQueryItor as it uses Python C API calls.

Thu Dec 18 00:19:56 GMT 2014  Olly Betts <olly@survex.com>

	* python3/pythontest.py: Actually reenable the test case which was
	  failing before the previous commit fixed the underlying problem.

Thu Dec 18 00:18:07 GMT 2014  Olly Betts <olly@survex.com>

	* python3/python.i: Don't release the GIL when using
	  XapianSWIGQueryItor as it uses Python C API calls.  (fixes #346)

Wed Dec 17 23:01:35 GMT 2014  Olly Betts <olly@survex.com>

	* python/generate-python-exceptions,
	  python3/generate-python-exceptions: Remove comment which is no
	  longer correct since #538 was fixed 4.5 years ago.

Mon Dec 15 00:10:42 GMT 2014  Olly Betts <olly@survex.com>

	* xapian-headers.i: Add DB_RETRY_LOCK as a constant to wrap.

Fri Dec 05 11:26:16 GMT 2014  Olly Betts <olly@survex.com>

	* ChangeLog,configure.ac: Fix typos reported by Veres Lajos.

Fri Dec 05 11:20:17 GMT 2014  Olly Betts <olly@survex.com>

	* doxygen_xml.conf.in: Update to avoid warnings about obsolete tags
	  from newer doxygen.

Sun Nov 30 22:00:58 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Add an example of specifying LUA_SO to --help output.

Sun Nov 30 21:49:48 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Rework LUA_SO checks to be clearer and to properly